compliance jdk6